src/App.css
.banner {
  width: 100vw;
  height: max-content;
  background-color: #F8457F;
  border-bottom: 3px solid black;
  display: flex;
  justify-content: center;
}

.piggyPayContainer img {
  margin: 0px auto;
  padding: 15px;
  width: 75vw;
}

.piggyCoinContainer img {
  visibility: hidden;
  width: 10px;
}

.credit {
  background-color: none;
  position: absolute;
  font-size: 4vw;
  padding: 2vw;
  top: 100%;
  left: 0%;
  z-index: 999;
  transform: translate(0%, -100%);
  font-family: 'Playpen Sans', cursive;
}

.credit img {
  width: 5vw;
  transform: translate(1vw, 1vw);
}

.background {
  width: 100vw;
  height: 100vh;
  background-color: #F2B5D7;
}

.content {
  max-width: 600px;
  margin: auto;
}

.input {
  text-align: center;
  padding-top: 0px;
  font-family: 'Playpen Sans', cursive;
}

.input img {
  width: 40vw;
  transition: transform .2s;
  margin-top: 5px;
  border-radius: 30%;
  margin-bottom: 20px;
}

.input img:active {
  transform: scale(1.08);
  cursor: pointer;
}


.input label {
  font-size: 1rem;
}

.startTimeForm {
  width: 100vw;
  max-width: 600px;
  margin: 2vw 0vw;
  display: flex;
  align-items: flex-start;
  
}

.startTimeForm label {
  width: 25vw;
  min-width: 25vw;
  float:left;
  text-align: right;
  font-weight: bold;
  padding: 0px;
  font-size: 3vw;
}

.startTimeForm input{
  border: 2px solid black;
  border-radius: 5px;
  text-align: center;
  font-size: 2.5vw;
  padding-left: 5px;
  height: 22px;
  width: 20vw;
  margin: 0px 2vw;
  float: left;
  font-family: 'Playpen Sans', cursive;
}

.startTimeForm select {
  border: 2px solid black;
  border-radius: 5px;
  text-align: center;
  font-size: 15px;
  padding-left: 5px;
  height: 26px;
  margin: 0px 1vw 0px 0px;
  float: left;
  font-family: 'Playpen Sans', cursive;
  visibility: hidden;
}

.startTimeForm button {
  width: 25px;
  height: 25px;
  font-size: 2.5vw;
  border-radius: 100%;
  border: 2px solid black;
  background-color: #969696;
  transform: translate(4px, 0px);
  margin: 1px;
  overflow: visible;
}

.startTimeForm button:active {
  cursor: pointer;
  width: 27px;
  height: 27px;
  margin: 0px;
  background-color: #f5598a;
  transition-duration: 0.05s;
  transition-timing-function: ease-in-out;
}

.salaryForm {
  width: 100vw;
  max-width: 600px;
  display: flex;
  margin: 2vw 0vw;
  justify-content: flex-start;
  margin-top: 10px;
}

.salaryForm label {
  width: 25vw;
  font-weight: bold;
  font-size: 3vw;
  min-width: 25vw;
  float: left;
  text-align: right;
  padding: 0px;
}

.salaryForm input{
  border: 2px solid black;
  border-radius: 5px;
  text-align: center;
  font-size: 2.5vw;
  padding-left: 5px;
  height: 22px;
  width: 20vw;
  margin: 0px 2vw;
  float: left;
  font-family: 'Playpen Sans', cursive;
}

.salaryForm select {
  border: 2px solid black;
  border-radius: 5px;
  text-align: center;
  font-size: 15px;
  padding-left: 5px;
  height: 26px;
  margin: 0px 1vw 0px 0px;
  float: left;
  font-family: 'Playpen Sans', cursive;
}

.salaryForm button {
  width: 25px;
  height: 25px;
  font-size: 2.5vw;
  border-radius: 100%;
  border: 2px solid black;
  background-color: #969696;
  transform: translate(4px, 0px);
  margin: 1px;
}

.salaryForm button:active {
  cursor: pointer;
  width: 27px;
  height: 27px;
  margin: 0px;
  background-color: #f5598a;
  transition-duration: 0.05s;
  transition-timing-function: ease-in-out;
}

.output {
  width: 100%;
  text-align: center;
  padding-top: 30px;
}

.output h1 {
  color: #B5E053;
  -webkit-text-stroke: 2px black;
  margin: auto;
  font-size: 20vw;
  max-width: 600px;
  overflow-x: auto;
}

.output h2 {
  font-size: 6vw;
  font-family: 'Playpen Sans', cursive;
}

.backgroundOverlay {
  z-index: 995;
  position: absolute;
  width: 100%;
  height: 100%;
  background-color: #00000090;
}

.errorContainer {
  width: 70vw;
  background-color: white;
  border: 8px solid black;
  border-radius: 15px;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  align-items: center;
  font-family: 'Playpen Sans', cursive;
}

.imgMsgContainer {
  display: flex;
  align-items: center;
}

.imgMsgContainer img {
  width: 80px;
  margin: 15px 10px 5px 15px;
}

.imgMsgContainer p {
  margin: 15px 15px 5px 15px;
  font-size: 1rem;
}

.oinkButtonContainer button {
  position: relative;
  left: 50vw;
  transform: translate(-25vw, 0%);
  margin: 5px 15px 15px 15px;
  font-size: 0.8rem;
  padding: 1px 5px 5px 5px;
  font-weight: bold;
  width: 44px;
  height: 30px;
  border: 2px solid black;
  border-radius: 5px;
  font-family: 'Playpen Sans', cursive;
}

.oinkButtonContainer button:hover {
  cursor: pointer;
  background-color: darkgray;
  font-size: bolder;
  border: 3px solid black;
}


@media only screen and (min-width: 1000px) {
  .piggyPayContainer img {
    width: 450px;
  }

  .piggyCoinContainer img {
    visibility: visible;
    position: absolute;
    width: 125px;
    margin: 30px 0px;
    transform: translate(-250px, 0px);
  }

  .content {
    display: flex;
    max-width: 1200px;
  }

  .output {
    padding-top: 10px;
    margin-top: 125px;
    width: 50%;
  }

  .output h2 {
    font-size: 4rem;
  }

  .output h1 {
    font-size: 10rem;
    -webkit-text-stroke: 4px black;
    max-width: 600px;
  }

  .input {
    padding-top: 0px;
    margin-top: 100px;
    width: 50%;
  }

  .input img {
    width: 300px;
    margin: 5px;
    border-radius: 30%;
    margin-bottom: 50px;
  }

  .input img:hover {
    transform: scale(1.15);
    cursor: pointer;
  }

  .label {
    font-size: 50px;
  }

  .input label {
    font-size: 2rem;
  }

  .startTimeForm {
    width: 100%;
  }

  .startTimeForm label {
    width: 180px;
    float: left;
    text-align: right;
  }

  .startTimeForm input{
    border: 3px solid black;
    border-radius: 5px;
    text-align: center;
    font-size: 1.5rem;
    padding-left: 5px;
    height: 25px;
    width: 150px;
    transform: translate(0px, 5px);
    margin: 0px 10px;
    float: left;
  }

  .startTimeForm button{
    width: 30px;
    height: 30px;
    font-size: 1.2rem;
    border-radius: 100%;
    border: 3px solid black;
    background-color: #969696;
    transform: translate(26px, 1px);
    margin: 1px;
  }

  .startTimeForm button:hover {
    cursor: pointer;
    width: 32px;
    height: 32px;
    margin: 0px;
    background-color: #f5598a;
    transition-duration: 0.05s;
    transition-timing-function: ease-in-out;
  }

  .salaryForm {
    width: 100%;
    display: flex;
    margin-top: 10px;
  }

  .salaryForm label {
    width: 180px;
    float: left;
    text-align: right;
  }

  .salaryForm input{
    border: 3px solid black;
    border-radius: 5px;
    text-align: center;
    font-size: 1.5rem;
    padding-left: 5px;
    height: 25px;
    width: 150px;
    transform: translate(0px, 5px);
    margin: 0px 10px;
    margin-right: 0px;
  }

  .salaryForm button{
    width: 30px;
    height: 30px;
    font-size: 1.2rem;
    border-radius: 100%;
    border: 3px solid black;
    background-color: #969696;
    transform: translate(0px, 5px);
    margin: 1px;
  }

  .salaryForm select{
    border: 3px solid black;
    border-radius: 5px;
    text-align: center;
    font-size: 1rem;
    padding-left: 5px;
    height: 30px;
    width: 120px;
    transform: translate(0px, 5px);
    margin: 0px 10px;
    float: left;
  }

  .salaryForm button:hover {
    cursor: pointer;
    width: 32px;
    height: 32px;
    margin: 0px;
    background-color: #f5598a;
  }

  .errorContainer {
    width: 500px;
    background-color: white;
    border: 8px solid black;
    border-radius: 15px;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    align-items: center;
    font-family: 'Playpen Sans', cursive;
  }
  
  .imgMsgContainer {
    display: flex;
    align-items: center;
  }
  
  .imgMsgContainer img {
    width: 120px;
    margin: 15px 10px 5px 15px;
  }
  
  .imgMsgContainer p {
    margin: 15px 5px 5px 15px;
    font-size: 1.5rem;
  }
  
  .oinkButtonContainer button {
    position: relative;
    left: 50%;
    transform: translate(-50%, 0%);
    margin: 5px 15px 15px 15px;
    font-size: 1rem;
    padding: 1px 5px 5px 5px;
    font-weight: bold;
    width: 50px;
    height: 33px;
    border: 2px solid black;
    border-radius: 5px;
    font-family: 'Playpen Sans', cursive;
  }
  
  .oinkButtonContainer button:hover {
    cursor: pointer;
    background-color: darkgray;
    font-size: bolder;
    border: 3px solid black;
  }

}

